fix post on mobile version

--- a/client/src/components/JSON_Placeholder/post/post.scss
+++ b/client/src/components/JSON_Placeholder/post/post.scss
@@ -1,3 +1,5 @@
+@import '../../scss/global.scss';
+
 .post {
   margin: 10px 0;
   display: flex;
@@ -20,6 +22,9 @@
     .title {
       width: 100%;
       height: 50px;
+      @media #{$mobile} {
+        height: 80px;
+      }
       
       span {
         height: 100%;
