--- a/client/src/components/scss/global.scss
+++ b/client/src/components/scss/global.scss
@@ -60,3 +60,6 @@
     max-width: 540px;
   }
 }
+
+$tablet: "(min-width: 568px) and (max-width: 767px)";
+$mobile: "(min-width: 320px) and (max-width: 567px)";
